--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +12,23 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px 0px;
 }
 
-ul {
+.left-links ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  margin-left: -30px;
+}
+
+.right-links ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  margin-right: 10px;
 }
 
 a {
