--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profile-image {
@@ -29,6 +32,19 @@ body {
   font-style: italic;
 }
 
+.left {
+  display: flex;
+  margin-left: 8px;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
+  margin-right: 8px;
+  gap: 16px;
+}
+
+
 button {
   border: none;
   border-radius: 8px;
@@ -45,4 +61,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding-left: 0;
 }
