--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,21 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px;
+}
+
+.main {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
 }
 
 .icon {
@@ -33,6 +48,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
+  flex-shrink: 0;
+  margin: 0px 10px 0px 0px
 }
 
 .close-button {
@@ -48,6 +66,9 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  display: flex;
+  flex-shrink: 0;
+  margin: 10px 10px 10px -10px;
 }
 
 button {
