--- a/advanced-html-css/animation/03-dropdown-menu/style.css
+++ b/advanced-html-css/animation/03-dropdown-menu/style.css
@@ -17,8 +17,9 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
   display: none;
+  transform-origin: top;
+  animation: dropdown 1s ease-in-out;
 }
 
 ul.dropdown-menu li:hover {
@@ -30,3 +31,16 @@ ul.dropdown-menu li:hover {
 }
 
 
+@keyframes dropdown {
+  from {
+    transform: scaleY(0)
+  }
+
+  80% {
+    transform: scaleY(1.1);
+  }
+
+  to {
+    transform: scaleY(1)
+  }
+}
